src/test/deca/context/invalid/provided/selection_int.deca
//Resultats :
//Erreur contextuelle
//Ligne 6 : expecting a class
{
int x = 0;
println(x.y);
}
